2.AKS/GitOps/jenkins/jenkins-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: jenkins
    meta.helm.sh/release-namespace: cicd
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-3.11.4
  name: jenkins-ing
  namespace: cicd
spec:
  rules:
  - host: jenkins.nodespringboot.org
    http:
      paths:
      - path: /jenkins(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080 
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
